# graph-differential-transformer

./: .gitignore  __init__.py  app.py  config.py  pyproject.toml  requirements.txt  setup.py
configs/: base.yaml  run_a.yaml  run_b.yaml  run_c.yaml
data/: coco_detection_dataset.py  vqa_answers.py  vqa_dataset.py
evaluation/: __init__.py  metrics.py  run_a_vqa.py  run_b_captioning.py  run_c_detection.py
models/: __init__.py  baseline.py  differential_attention.py  embeddings.py  gdt_block.py  gdt_decoder.py  gdt_encoder.py  graph_constructor.py  pretrained_init.py
models/task_heads/: __init__.py  captioning_head.py  detection_head.py  vqa_head.py
scripts/: evaluate.py  preprocess_data.py  train.py
tests/: test_differential_attention.py  test_embeddings.py  test_gdt_block.py  test_graph_constructor.py  test_task_heads.py
training/: __init__.py  losses.py  phase1_pretrain.py  phase2_graph.py  phase3_finetune.py  trainer.py
